--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,42 @@ body {
   font-family: "Josefin Sans", sans-serif;
   background-color: #6a2697;
 }
+.typed-text {
+  color:#ffb20a;  
+}
+/* */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Josefin Sans', sans-serif;
+
+}
+
+
+.container p span.cursor {
+  display: inline-block;
+  background-color: #ccc;
+  margin-left: 0.1rem;
+  width: 3px;
+  animation: blink 1s infinite;
+  
+}
+.container p span.cursor.typing {
+  animation: none;
+  
+}
+@keyframes blink {
+  0%  { background-color: #ccc; }
+  49% { background-color: #ccc; }
+  50% { background-color: transparent; }
+  99% { background-color: transparent; }
+  100%  { background-color: #ccc; }
+}
 /*  Background */
 .background {
   /* background: #6a2697; */
@@ -352,11 +388,393 @@ footer {
   padding: 20px 0px;
 }
 
-.card .icons {
-  font-size: 25px;
-  color: #ffb20a;
-  margin: 20px 0px px;
-  color: #4caf50;
-  vertical-align: middle;
-  margin-right: 10px;
+/* Configuração ------------ */
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  /* transition: 1s; */
 }
+
+a {
+  text-decoration: none;
+}
+body {
+  color: rgb(255, 255, 255);
+  font-family: "Josefin Sans", sans-serif;
+  background-color: #6a2697;
+}
+.typed-text {
+  color:#ffb20a;  
+}
+/* */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Josefin Sans', sans-serif;
+
+}
+
+
+.container p span.cursor {
+  display: inline-block;
+  background-color: #ccc;
+  margin-left: 0.1rem;
+  width: 3px;
+  animation: blink 1s infinite;
+  
+}
+.container p span.cursor.typing {
+  animation: none;
+  
+}
+@keyframes blink {
+  0%  { background-color: #ccc; }
+  49% { background-color: #ccc; }
+  50% { background-color: transparent; }
+  99% { background-color: transparent; }
+  100%  { background-color: #ccc; }
+}
+/*  Background */
+.background {
+  /* background: #6a2697; */
+  background: -webkit-linear-gradient(to left, #6a00f5, #bd80fa);
+  width: 100%;
+  height: 100vh;
+}
+
+.circles {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.circles li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
+.cor-text-secundario {
+  color: #ffb20a;
+}
+
+/* Cabeçalho */
+
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 960px;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.nav-list {
+  display: flex;
+  list-style: none;
+}
+
+.nav-list a {
+  color: white;
+  padding: 20px;
+}
+
+#logo {
+  color: white;
+  font-size: 40px;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+.boas-vindas {
+  position: absolute;
+  top: 50%;
+  left: 6%;
+}
+
+.boas-vindas h1 {
+  margin: 20px 0px;
+  font-size: 50px;
+}
+
+.boas-vindas h3 {
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+
+.btn {
+  background-color: transparent;
+  border: 2px solid #ffb20a;
+  /* padding: 50px; */
+  padding: 0.5em 1em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  color: white;
+  display: inline-block;
+  font-weight: 100;
+  
+}
+
+.btn:hover {
+  background-color: #ffb20a;
+  /* font-weight: bold; */
+  font-weight: 900;
+  color: black;
+}
+
+/*  Sobre mim ******************** */
+#sobre {
+  width: 100%;
+  background-color: #191919;
+  padding: 100px 0px;
+  z-index: 10;
+}
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+#sobre img {
+  height: auto;
+  width: 450px;
+}
+.sobre-texto {
+  width: 300px;
+}
+
+.sobre-texto h2 {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+.sobre-texto h5 {
+  font-size: 20px;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+}
+
+.sobre-texto p {
+  color: #ffb20a;
+  letter-spacing: 1px;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 40px;
+  text-align: justify;
+}
+.sobre-texto a {
+  color: white;
+}
+
+/*  Serviços ******************* */
+
+.servico {
+  width: 100%;
+  background-color: #101010;
+}
+
+.servico .titulo {
+  padding-top: 30px;
+}
+
+.servico .titulo h2 {
+  font-size: 50px;
+  text-align: center;
+}
+
+/* Card */
+.box {
+  padding: 100px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 330px;
+  min-height: 300px;
+  border-radius: 10px;
+  padding: 2em 0em;
+  text-align: center;
+  background-color: #191919;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.card:hover {
+  box-shadow: 1px 1px 0px #ffb20a;
+}
+.card i {
+  font-size: 40px;
+  color: #ffb20a;
+  padding: 10px 0px;
+}
+
+.card h5 {
+  font-size: 23px;
+  margin-bottom: 15px;
+  letter-spacing: 1px;
+}
+
+.card p {
+  /* padding: 0px 20px; */
+  width: 90%;
+  height: 120px;
+  color: #ffb20a;
+  letter-spacing: 1px;
+  line-height: 22px;
+  /* margin-bottom: 30px; */
+}
+.card a {
+  color: white;
+}
+/* .card > * {
+  background: linear-gradient(45deg, #000, #555);
+} */
+/*  Frase ****************** */
+
+.frase {
+  /* background-image: url(../imagens/bg-2.jpg); */
+  /* background-attachment: fixed; */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  width: 100%;
+  padding: 30px 0px;
+}
+
+.frase p {
+  width: 60%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#aspas {
+  font-size: 40px;
+}
+
+.frase #texto {
+  font-size: 30px;
+  letter-spacing: 2px;
+}
+.box.contato {
+  padding: 100px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+/* Footer ******** */
+footer {
+  background-color: #101010;
+  width: 100%;
+  text-align: center;
+  padding: 20px 0px;
+}
+
