--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ a {
 body {
   color: rgb(255, 255, 255);
   font-family: "Josefin Sans", sans-serif;
-  background-color: #6a2697;
+  /* background-color: #268e97;*/
 }
 .typed-text {
-  color:#ffb20a;  
+  color: #ffb20a;
 }
 /* */
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans");
 
 * {
   margin: 0;
@@ -26,10 +26,8 @@ body {
   box-sizing: border-box;
 }
 body {
-  font-family: 'Josefin Sans', sans-serif;
-
+  font-family: "Josefin Sans", sans-serif;
 }
-
 
 .container p span.cursor {
   display: inline-block;
@@ -37,18 +35,26 @@ body {
   margin-left: 0.1rem;
   width: 3px;
   animation: blink 1s infinite;
-  
 }
 .container p span.cursor.typing {
   animation: none;
-  
 }
 @keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
-  50% { background-color: transparent; }
-  99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
+  0% {
+    background-color: #ccc;
+  }
+  49% {
+    background-color: #ccc;
+  }
+  50% {
+    background-color: transparent;
+  }
+  99% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: #ccc;
+  }
 }
 /*  Background */
 .background {
@@ -227,7 +233,6 @@ body {
   color: white;
   display: inline-block;
   font-weight: 100;
-  
 }
 
 .btn:hover {
@@ -405,10 +410,10 @@ body {
   background-color: #6a2697;
 }
 .typed-text {
-  color:#ffb20a;  
+  color: #ffb20a;
 }
 /* */
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans");
 
 * {
   margin: 0;
@@ -416,10 +421,8 @@ body {
   box-sizing: border-box;
 }
 body {
-  font-family: 'Josefin Sans', sans-serif;
-
+  font-family: "Josefin Sans", sans-serif;
 }
-
 
 .container p span.cursor {
   display: inline-block;
@@ -427,18 +430,26 @@ body {
   margin-left: 0.1rem;
   width: 3px;
   animation: blink 1s infinite;
-  
 }
 .container p span.cursor.typing {
   animation: none;
-  
 }
 @keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
-  50% { background-color: transparent; }
-  99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
+  0% {
+    background-color: #ccc;
+  }
+  49% {
+    background-color: #ccc;
+  }
+  50% {
+    background-color: transparent;
+  }
+  99% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: #ccc;
+  }
 }
 /*  Background */
 .background {
@@ -617,7 +628,6 @@ body {
   color: white;
   display: inline-block;
   font-weight: 100;
-  
 }
 
 .btn:hover {
@@ -777,4 +787,3 @@ footer {
   text-align: center;
   padding: 20px 0px;
 }
-
