--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ a {
 body {
   color: rgb(255, 255, 255);
   font-family: "Josefin Sans", sans-serif;
+
   /* background-color: #268e97;*/
 }
 .typed-text {
@@ -61,7 +62,6 @@ body {
   /* background: #6a2697; */
   background: -webkit-linear-gradient(to left, #6a00f5, #bd80fa);
   width: 100%;
-  height: 100vh;
 }
 
 .circles {
@@ -178,17 +178,7 @@ body {
   color: #ffb20a;
 }
 
-/* Cabeçalho */
-
-.menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  max-width: 960px;
-  margin: 0 auto;
-  padding-top: 20px;
-}
+/* Cabeçalho nav */
 
 .nav-list {
   display: flex;
@@ -574,7 +564,14 @@ body {
 }
 
 /* Cabeçalho */
-
+.header {
+  width: 100%;
+  background-color: #6a2697;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
 .menu {
   display: flex;
   align-items: center;
@@ -686,15 +683,6 @@ body {
 .servico {
   width: 100%;
   background-color: #101010;
-}
-
-.servico .titulo {
-  padding-top: 30px;
-}
-
-.servico .titulo h2 {
-  font-size: 50px;
-  text-align: center;
 }
 
 /* Card */
